QFJ-884 Change the source and classes used to build the messageXX.jars.